test/errors/overflow/overflow-prg-2.asm
.inesprg 2
.ineschr 0
.inesmap 0
.inesmir 0

.prg 0

.db $12, $34

.prg 1

.org $FFFF

.db $56, $78
